refactor: trim JsonUtils to active usage